examples/BAD/BAD_053_CONTENT_BUILDING_1/main.nut

{
    filePath = "./main.nut"
    isDirectory = true
}

@ ["this", "is", "a", "array"]
